reduced line height for FacciamoServizi text. Fixed X link in footer and fixed navbar to fit in one box avoiding scroll on mobile

--- a/src/components/Facciamo/FacciamoServizi.css
+++ b/src/components/Facciamo/FacciamoServizi.css
@@ -72,7 +72,7 @@
 
 .facSvcTextWrap{
   display: grid;
-  gap: 10px;
+  gap: 0;
 }
 
 .facSvcText{
